objects/Case_Contact__c/Case_Contact__c.object-meta.xml
<CustomObject>
    <label>Case Contact</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Case Contact Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>