objects/Case_Contact__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>What Role is this Contact within this Case</description>
    <inlineHelpText>What Role is this Contact within this Case</inlineHelpText>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Victim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>