objects/Case_Contact__c/fields/Law_Case__c.field-meta.xml
<CustomField>
    <fullName>Law_Case__c</fullName>
    <description>Law Case for this Contact and Role</description>
    <inlineHelpText>Law Case for this Contact and Role</inlineHelpText>
    <label>Law Case</label>
    <referenceTo>Law_Case__c</referenceTo>
    <relationshipLabel>Case Contacts</relationshipLabel>
    <relationshipName>Case_Contacts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>